--- a/style.css
+++ b/style.css
@@ -163,15 +163,17 @@ p{
 .footer{
   background-color: #2176FF;
   margin-top:  100px;
-  padding: 30px;
+  padding:  15px;
   text-align: center;
 }
-.footer h2{
+.footer h2, .footer p{
   color: #ffffff;
   font-family: 'Raleway',sans-serif;
   font-size: 14px;
   font-weight: 100;
   letter-spacing: 2px;
+  text-align: center;
+  padding-bottom:  0;
 }
 
 a {
